chore: clean up

--- a/resources/ui/pipeline.ui
+++ b/resources/ui/pipeline.ui
@@ -40,7 +40,7 @@
                 </widget>
             </item>
             <item row="3" column="0">
-                <widget class="QPushButton" name="pushButton">
+                <widget class="QPushButton" name="clearButton">
                     <property name="text">
                         <string>Clear</string>
                     </property>
