--- a/resources/ui/view_config.ui
+++ b/resources/ui/view_config.ui
@@ -6,8 +6,8 @@
          <rect>
              <x>0</x>
              <y>0</y>
-             <width>284</width>
-             <height>219</height>
+             <width>324</width>
+             <height>189</height>
          </rect>
      </property>
      <property name="windowTitle">
@@ -29,7 +29,7 @@
          <property name="spacing">
              <number>2</number>
          </property>
-         <item row="2" column="0">
+         <item row="3" column="0">
              <widget class="QDialogButtonBox" name="buttonBox">
                  <property name="orientation">
                      <enum>Qt::Horizontal</enum>
@@ -39,7 +39,34 @@
                  </property>
              </widget>
          </item>
-         <item row="0" column="0">
+         <item row="2" column="0">
+             <widget class="QGroupBox" name="transformGroupBox">
+                 <property name="title">
+                     <string>Transform</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_2">
+                     <property name="spacing">
+                         <number>0</number>
+                     </property>
+                     <property name="leftMargin">
+                         <number>0</number>
+                     </property>
+                     <property name="topMargin">
+                         <number>0</number>
+                     </property>
+                     <property name="rightMargin">
+                         <number>0</number>
+                     </property>
+                     <property name="bottomMargin">
+                         <number>0</number>
+                     </property>
+                     <item>
+                         <widget class="TransformPanel" name="transformPanel" native="true"/>
+                     </item>
+                 </layout>
+             </widget>
+         </item>
+         <item row="1" column="0">
              <widget class="QGroupBox" name="pipelineGroupBox">
                  <property name="title">
                      <string>Pipeline</string>
@@ -66,12 +93,9 @@
                  </layout>
              </widget>
          </item>
-         <item row="1" column="0">
-             <widget class="QGroupBox" name="transformGroupBox">
-                 <property name="title">
-                     <string>Transform</string>
-                 </property>
-                 <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item row="0" column="0">
+             <widget class="QWidget" name="widget" native="true">
+                 <layout class="QHBoxLayout" name="horizontalLayout">
                      <property name="spacing">
                          <number>0</number>
                      </property>
@@ -88,7 +112,37 @@
                          <number>0</number>
                      </property>
                      <item>
-                         <widget class="TransformPanel" name="transformPanel" native="true"/>
+                         <spacer name="horizontalSpacer">
+                             <property name="orientation">
+                                 <enum>Qt::Horizontal</enum>
+                             </property>
+                             <property name="sizeHint" stdset="0">
+                                 <size>
+                                     <width>40</width>
+                                     <height>20</height>
+                                 </size>
+                             </property>
+                         </spacer>
+                     </item>
+                     <item>
+                         <widget class="QLabel" name="nameLabel">
+                             <property name="text">
+                                 <string>&lt;name&gt;</string>
+                             </property>
+                         </widget>
+                     </item>
+                     <item>
+                         <spacer name="horizontalSpacer_2">
+                             <property name="orientation">
+                                 <enum>Qt::Horizontal</enum>
+                             </property>
+                             <property name="sizeHint" stdset="0">
+                                 <size>
+                                     <width>40</width>
+                                     <height>20</height>
+                                 </size>
+                             </property>
+                         </spacer>
                      </item>
                  </layout>
              </widget>
