--- a/resources/ui/overview.ui
+++ b/resources/ui/overview.ui
@@ -4,10 +4,10 @@
  <widget class="QWidget" name="Overview">
   <property name="geometry">
    <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>479</width>
-    <height>327</height>
+       <x>0</x>
+       <y>0</y>
+       <width>529</width>
+       <height>457</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -92,7 +92,7 @@
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>275</height>
+               <height>450</height>
            </size>
           </property>
           <layout class="QGridLayout" name="gridLayout">
@@ -129,84 +129,126 @@
               <property name="topMargin">
                <number>0</number>
               </property>
-              <property name="rightMargin">
-               <number>0</number>
-              </property>
-              <property name="bottomMargin">
-               <number>0</number>
-              </property>
-              <property name="spacing">
-               <number>0</number>
-              </property>
-              <item row="1" column="1">
-               <widget class="QLabel" name="sourceLabel">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="text">
-                 <string>&lt;width&gt;x&lt;height&gt;:&lt;bands&gt; &lt;dtype&gt;</string>
+                 <property name="rightMargin">
+                     <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                     <number>0</number>
+                 </property>
+                 <property name="spacing">
+                     <number>0</number>
+                 </property>
+                 <item row="4" column="1">
+                     <widget class="QGroupBox" name="transformGroup">
+                         <property name="title">
+                             <string>Transform</string>
+                         </property>
+                         <layout class="QHBoxLayout" name="horizontalLayout">
+                             <property name="spacing">
+                                 <number>3</number>
+                             </property>
+                             <property name="leftMargin">
+                                 <number>5</number>
+                             </property>
+                             <property name="topMargin">
+                                 <number>5</number>
+                             </property>
+                             <property name="rightMargin">
+                                 <number>5</number>
+                             </property>
+                             <property name="bottomMargin">
+                                 <number>5</number>
+                             </property>
+                             <item>
+                                 <widget class="TransformPanel" name="transformPanel" native="true"/>
+                             </item>
+                         </layout>
+                     </widget>
+                 </item>
+                 <item row="2" column="1">
+                     <widget class="QLabel" name="distributionLabel">
+                         <property name="sizePolicy">
+                             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                                 <horstretch>0</horstretch>
+                                 <verstretch>0</verstretch>
+                             </sizepolicy>
+                         </property>
+                         <property name="text">
+                             <string>&lt;min&gt;/&lt;max&gt; | mean: &lt;mean&gt; std_dev: &lt;std&gt;</string>
+                         </property>
+                     </widget>
+                 </item>
+                 <item row="1" column="1">
+                     <widget class="QLabel" name="sourceLabel">
+                         <property name="sizePolicy">
+                             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                                 <horstretch>0</horstretch>
+                                 <verstretch>0</verstretch>
+                             </sizepolicy>
+                         </property>
+                         <property name="text">
+                             <string>&lt;width&gt;x&lt;height&gt;:&lt;bands&gt; &lt;dtype&gt;</string>
                 </property>
                </widget>
               </item>
-              <item row="2" column="1">
-               <widget class="QGroupBox" name="areaGroup">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="title">
-                 <string>area</string>
-                </property>
-                <layout class="QGridLayout" name="gridLayout_2">
-                 <item row="2" column="1">
-                  <widget class="QPushButton" name="bestAspectButton">
-                   <property name="sizePolicy">
-                    <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-                     <horstretch>0</horstretch>
-                     <verstretch>0</verstretch>
-                    </sizepolicy>
-                   </property>
-                   <property name="text">
-                    <string>Fit</string>
-                   </property>
-                   <property name="iconSize">
-                    <size>
-                     <width>16</width>
-                     <height>16</height>
-                    </size>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="2" column="0">
-                  <widget class="QLabel" name="windowLabel">
-                   <property name="sizePolicy">
-                    <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-                     <horstretch>0</horstretch>
-                     <verstretch>0</verstretch>
-                    </sizepolicy>
-                   </property>
-                   <property name="text">
-                    <string>windowLabel</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="0" colspan="2">
-                  <widget class="QLabel" name="distributionLabel">
-                   <property name="sizePolicy">
-                    <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                     <horstretch>0</horstretch>
-                     <verstretch>0</verstretch>
-                    </sizepolicy>
-                   </property>
-                   <property name="text">
-                    <string>&lt;min&gt;/&lt;max&gt; | mean: &lt;mean&gt; std_dev: &lt;std&gt;</string>
-                   </property>
-                  </widget>
+                 <item row="3" column="1">
+                     <widget class="QGroupBox" name="areaGroup">
+                         <property name="sizePolicy">
+                             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                                 <horstretch>0</horstretch>
+                                 <verstretch>0</verstretch>
+                             </sizepolicy>
+                         </property>
+                         <property name="title">
+                             <string>area</string>
+                         </property>
+                         <layout class="QGridLayout" name="gridLayout_2">
+                             <property name="leftMargin">
+                                 <number>5</number>
+                             </property>
+                             <property name="topMargin">
+                                 <number>5</number>
+                             </property>
+                             <property name="rightMargin">
+                                 <number>5</number>
+                             </property>
+                             <property name="bottomMargin">
+                                 <number>5</number>
+                             </property>
+                             <property name="spacing">
+                                 <number>3</number>
+                             </property>
+                             <item row="2" column="0">
+                                 <widget class="QLabel" name="windowLabel">
+                                     <property name="sizePolicy">
+                                         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+                                             <horstretch>0</horstretch>
+                                             <verstretch>0</verstretch>
+                                         </sizepolicy>
+                                     </property>
+                                     <property name="text">
+                                         <string>windowLabel</string>
+                                     </property>
+                                 </widget>
+                             </item>
+                             <item row="2" column="1">
+                                 <widget class="QPushButton" name="bestAspectButton">
+                                     <property name="sizePolicy">
+                                         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                                             <horstretch>0</horstretch>
+                                             <verstretch>0</verstretch>
+                                         </sizepolicy>
+                                     </property>
+                                     <property name="text">
+                                         <string>Fit</string>
+                                     </property>
+                                     <property name="iconSize">
+                                         <size>
+                                             <width>16</width>
+                                             <height>16</height>
+                                         </size>
+                                     </property>
+                                 </widget>
                  </item>
                 </layout>
                </widget>
@@ -336,18 +378,24 @@
   </action>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>Overview</class>
-   <extends>QWidget</extends>
-   <header>piafedit.gui.image.overview</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>BrowserWidget</class>
-   <extends>QWidget</extends>
-   <header>qtwidgets.browser.browser_widget</header>
-   <container>1</container>
-  </customwidget>
+     <customwidget>
+         <class>Overview</class>
+         <extends>QWidget</extends>
+         <header>piafedit.gui.image.overview</header>
+         <container>1</container>
+     </customwidget>
+     <customwidget>
+         <class>BrowserWidget</class>
+         <extends>QWidget</extends>
+         <header>qtwidgets.browser.browser_widget</header>
+         <container>1</container>
+     </customwidget>
+     <customwidget>
+         <class>TransformPanel</class>
+         <extends>QWidget</extends>
+         <header>piafedit.gui.tools.transform_panel</header>
+         <container>1</container>
+     </customwidget>
  </customwidgets>
  <resources/>
  <connections/>
