--- a/resources/ui/pipeline.ui
+++ b/resources/ui/pipeline.ui
@@ -1,70 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>Pipeline</class>
-    <widget class="QWidget" name="Pipeline">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>287</width>
-                <height>150</height>
-            </rect>
-        </property>
-        <property name="windowTitle">
-            <string>Pipeline</string>
-        </property>
-        <layout class="QGridLayout" name="gridLayout">
-            <property name="leftMargin">
-                <number>0</number>
-            </property>
-            <property name="topMargin">
-                <number>0</number>
-            </property>
-            <property name="rightMargin">
-                <number>0</number>
-            </property>
-            <property name="bottomMargin">
-                <number>0</number>
-            </property>
-            <property name="spacing">
-                <number>2</number>
-            </property>
-            <item row="2" column="0">
-                <widget class="QComboBox" name="operatorCombo"/>
-            </item>
-            <item row="2" column="1">
-                <widget class="QPushButton" name="insertButton">
-                    <property name="text">
-                        <string>InsertBefore</string>
-                    </property>
-                </widget>
-            </item>
-            <item row="3" column="0">
-                <widget class="QPushButton" name="clearButton">
-                    <property name="text">
-                        <string>Clear</string>
-                    </property>
-                </widget>
-            </item>
-            <item row="3" column="1">
-                <widget class="QPushButton" name="removeButton">
-                    <property name="text">
-                        <string>Remove</string>
-                    </property>
-                </widget>
-            </item>
-            <item row="0" column="0" colspan="2">
-                <widget class="QListWidget" name="pipelineList">
-                    <property name="selectionMode">
-                        <enum>QAbstractItemView::MultiSelection</enum>
-                    </property>
-                    <property name="sortingEnabled">
-                        <bool>false</bool>
-                    </property>
-                </widget>
-            </item>
-        </layout>
+ <class>Pipeline</class>
+ <widget class="QWidget" name="Pipeline">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>287</width>
+    <height>150</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Pipeline</string>
+  </property>
+  <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <property name="spacing">
+    <number>2</number>
+   </property>
+   <item row="3" column="0">
+    <widget class="QPushButton" name="clearButton">
+     <property name="text">
+      <string>clear</string>
+     </property>
     </widget>
-    <resources/>
-    <connections/>
+   </item>
+   <item row="2" column="0">
+    <widget class="QComboBox" name="operatorCombo"/>
+   </item>
+   <item row="2" column="1">
+    <widget class="QPushButton" name="addBeforeButton">
+     <property name="text">
+      <string>add before</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="removeButton">
+     <property name="text">
+      <string>remove</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="addAfterButton">
+     <property name="text">
+      <string>add after</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
+    <widget class="QListWidget" name="pipelineList">
+     <property name="selectionMode">
+      <enum>QAbstractItemView::MultiSelection</enum>
+     </property>
+     <property name="sortingEnabled">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
