--- a/resources/ui/roi_view.ui
+++ b/resources/ui/roi_view.ui
@@ -87,7 +87,7 @@
        <item>
         <widget class="QPushButton" name="configureButton">
          <property name="text">
-          <string>configure</string>
+          <string>Configure</string>
          </property>
         </widget>
        </item>
